# r_agent

./: .gitignore  Cargo.toml  README.md
my_lib/: Cargo.toml  README.md
my_lib/src/api/: agents.rs  dtos.rs  mod.rs  request.rs  tools_registry.rs
src/: args.rs  lib.rs
src/cmd/: ascii.rs  run.rs
src/core/: config.rs  runner.rs  session.rs  tools.rs
