[package]
name = "r-agent"
version = "0.1.0"
edition = "2024"

[lib]
name = "r_agent"
path = "src/lib.rs"

[[bin]]
name = "ragent"
path = "src/bin/main.rs"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
anyhow = "1.0.100"
colored = "3.0.0"
dirs = "6.0.0"
serde = "1.0.228"
serde_json = "1.0.148"
atty = "0.2.14"
toml = "0.9.8"
my_lib = { path = "my_lib" }
async-trait = "0.1.89"
chrono = "0.4.42"