[package]
name = "my_lib"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
serde = "1.0.228"
serde_json = "1.0.148"
toml = "0.9.8"
reqwest = { version = "0.12.25", features = ["json", "stream"] }
colored = "3.0.0"
anyhow = "1.0.100"
futures-util = "0.3.31"
eventsource-stream = "0.2.3"
tokio = { version = "1.48.0", features = ["full"] }